Update project title and description for GitHub CI/CD demonstration

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,26 +2,27 @@
 <html>
   <head>
     <meta charset="ISO-8859-1" />
-    <title>DevOps Demo Application</title>
+    <title>GitHub CI/CD Demo</title>
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to DevOps Demo Project</h1>
+      <h1>Welcome to GitHub CI/CD Demo Project</h1>
       <p>
-        This is a demonstration project for DevOps practices and continuous
-        integration/continuous deployment pipelines.
+        This is a demonstration project showcasing GitHub Actions for continuous
+        integration and continuous deployment workflows.
       </p>
       <p>
-        The application showcases how to set up a simple web application with
-        proper CI/CD workflows.
+        The application demonstrates how to implement automated build, test and
+        deployment pipelines using GitHub's native CI/CD features.
       </p>
       <p>Technologies used:</p>
       <ul>
         <li>Java</li>
         <li>Maven</li>
         <li>HTML/CSS</li>
-        <li>Continuous Integration</li>
-        <li>Continuous Deployment</li>
+        <li>GitHub Actions</li>
+        <li>GitHub Pages</li>
+        <li>GitHub Packages</li>
       </ul>
     </div>
   </body>
