--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,7 @@
         
                 <!-- Change Attemtpt -->
         <li>Change Attempt 1</li>
+		<li>Change Attempt 2 Deployment</li>
       </ul>
     </div>
   </body>
