--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
                 <!-- Change Attemtpt -->
         <li>Change Attempt 1</li>
 		<li>Change Attempt 2 Deployment</li>
+		<li>Change Attempt 3 Deployment</li>
       </ul>
     </div>
   </body>
