--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,11 +23,14 @@
         <li>GitHub Actions</li>
         <li>GitHub Pages</li>
         <li>GitHub Packages</li>
-        
-                <!-- Change Attemtpt -->
+      </ul>
+
+      <h2>CHANGE ATTEMPTS</h2>
+      <ul>
+        <!-- Change Attemtpt -->
         <li>Change Attempt 1</li>
-		<li>Change Attempt 2 Deployment</li>
-		<li>Change Attempt 3 Deployment</li>
+        <li>Change Attempt 2 Deployment</li>
+        <li>Change Attempt 3 Deployment</li>
       </ul>
     </div>
   </body>
