--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
         <li>Change Attempt 1</li>
         <li>Change Attempt 2 Deployment</li>
         <li>Change Attempt 3 Deployment</li>
+        <li>Change Attempt 4 Deployment</li>
       </ul>
     </div>
   </body>
